--- a/src/HiringDATN.HttpApi.Host/appsettings.json
+++ b/src/HiringDATN.HttpApi.Host/appsettings.json
@@ -1,21 +1,31 @@
 {
-  "App": {
-    "SelfUrl": "https://localhost:44322",
-    "AngularUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.HiringDATN.com,http://localhost:4200",
-    "RedirectAllowedUrls": "http://localhost:4200",
-    "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
-  },
+    "App": {
+        "SelfUrl": "https://localhost:44322",
+        "AngularUrl": "http://localhost:4200",
+        "CorsOrigins": "https://*.HiringDATN.com,http://localhost:4200",
+        "RedirectAllowedUrls": "http://localhost:4200",
+        "DisablePII": false,
+        "HealthCheckUrl": "/health-status"
+    },
     "ConnectionStrings": {
         "Default": "Host=localhost;Port=5432;Database=HiringDATN;User ID=postgres;Password=ilovemu1234;"
     },
-  "AuthServer": {
-    "Authority": "https://localhost:44322",
-    "RequireHttpsMetadata": true,
-    "SwaggerClientId": "HiringDATN_Swagger",
-    "CertificatePassPhrase": "c094663a-c4c6-45de-b857-64c3de24c929"
-  },
-  "StringEncryption": {
-    "DefaultPassPhrase": "BEwLXLuBl3ZRjRya"
-  }}
+    "AuthServer": {
+        "Authority": "https://localhost:44322",
+        "RequireHttpsMetadata": true,
+        "SwaggerClientId": "HiringDATN_Swagger",
+        "CertificatePassPhrase": "c094663a-c4c6-45de-b857-64c3de24c929"
+    },
+    "StringEncryption": {
+        "DefaultPassPhrase": "BEwLXLuBl3ZRjRya"
+    },
+    "AIOptions": {
+        "GeminiApiKey": "AIzaSyB-9jvq66CVPRwf9NXxNa4U5AcaiRqAaag", // Key lấy từ Google AI Studio
+        "EmbeddingModelId": "text-embedding-004",
+        "ChatModelId": "gemini-2.0-flash"
+    },
+    "GoogleSearch": {
+        "ApiKey": "AIzaSyArs-JNYLbH7omtSbzVu6yrRGOkhGXck44", // Key lấy từ Google Cloud Console
+        "SearchEngineId": "63ab23488ede8442e" // ID (cx) từ Programmable Search Engine
+    }
+}
