--- a/src/HiringDATN.HttpApi/HiringDATN.HttpApi.csproj
+++ b/src/HiringDATN.HttpApi/HiringDATN.HttpApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HiringDATN.Application.Contracts\HiringDATN.Application.Contracts.csproj" />
+		<ProjectReference Include="..\HiringDATN.Application\HiringDATN.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
