--- a/src/HiringDATN.HttpApi.Host/HiringDATN.HttpApi.Host.csproj
+++ b/src/HiringDATN.HttpApi.Host/HiringDATN.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -8,6 +8,7 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <RootNamespace>HiringDATN</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
+		<NoWarn>$(NoWarn);SKEXP0050;SKEXP0110;SKEXP0001</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'HiringDATN.HttpApi.Host' " />
