--- a/src/HiringDATN.HttpApi.Host/appsettings.json
+++ b/src/HiringDATN.HttpApi.Host/appsettings.json
@@ -20,12 +20,12 @@
         "DefaultPassPhrase": "BEwLXLuBl3ZRjRya"
     },
     "AIOptions": {
-        "GeminiApiKey": "AIzaSyB-9jvq66CVPRwf9NXxNa4U5AcaiRqAaag", // Key lấy từ Google AI Studio
+        "GeminiApiKey": "AIzaSyB-", // Key lấy từ Google AI Studio
         "EmbeddingModelId": "text-embedding-004",
         "ChatModelId": "gemini-2.0-flash"
     },
     "GoogleSearch": {
-        "ApiKey": "AIzaSyArs-JNYLbH7omtSbzVu6yrRGOkhGXck44", // Key lấy từ Google Cloud Console
-        "SearchEngineId": "63ab23488ede8442e" // ID (cx) từ Programmable Search Engine
+        "ApiKey": "AIzaSyArs", // Key lấy từ Google Cloud Console
+        "SearchEngineId": "" // ID (cx) từ Programmable Search Engine
     }
 }
