--- a/angular/package.json
+++ b/angular/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "~20.0.0",
     "@angular/router": "~20.0.0",
     "@babel/runtime": "^7.28.4",
+    "@primeng/themes": "^21.0.2",
     "material-icons": "^1.13.14",
     "primeicons": "^7.0.0",
     "primeng": "^20.4.0",
@@ -61,6 +62,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.0.0",
+    "less": "^4.5.1",
     "typescript": "~5.8.0",
     "webpack": "^5.104.0"
   }
